--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+staticfiles
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,django,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,django,visualstudiocode
 
